--- a/resources/org/limewire/gui/resources/icon_mapping.properties
+++ b/resources/org/limewire/gui/resources/icon_mapping.properties
@@ -89,3 +89,7 @@ SLIDE_CONTROLS_OVERLAY_TIP_JAR=tip_jar
 SLIDE_CONTROLS_OVERLAY_TIP_JAR_ROLLOVER=tip_jar_over
 VPN_ON=vpn_on
 VPN_OFF=vpn_off
+SOCIAL_MEDIA_CHECK=social_wizard_check
+SOCIAL_WIZARD_FACEBOOK=social_wizard_facebook
+SOCIAL_WIZARD_TWITTER=social_wizard_twitter
+SOCIAL_WIZARD_REDDIT=social_wizard_reddit
